--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 			.dropdown {
 			  display: inline-block;
 			  position: absolute;
-  top: 10px;
-  right: 15px;
+  top: 70px;
+  right: 55px;
 			}
 			
 			.dropdown-content {
@@ -67,6 +67,7 @@
 			</style>
 	</head>
 	<body>
+		<img src="img/helsingborg_300x200.png">
 		<div class="dropdown">
 			<button onclick="myFunction()" class="dropbtn">Min sida</button>
 	<!--		<div id="myDropdown" class="dropdown-content">
